<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/game_settings_header">

        <ListPreference
            app:defaultValue="0"
            app:persistent="true"
            app:entries="@array/levels_entries"
            app:entryValues="@array/levels_values"
            app:key="level"
            app:title="@string/levels_title"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false"/>

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:persistent="true"
            app:key="tutorial_done"
            app:title="tutorial_visto"
            app:isPreferenceVisible="false"/>

        <ListPreference
            app:persistent="true"
            app:defaultValue="1"
            app:entries="@array/grid_dim_entries"
            app:entryValues="@array/grid_dim_values"
            app:key="grid_dim"
            app:title="@string/dimensions_title"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio_header">

        <SwitchPreferenceCompat
            app:key="sound_effects"
            app:title="@string/sfx_title" />

        <SwitchPreferenceCompat
            app:key="background_music"
            app:title="@string/music_title" />

    </PreferenceCategory>

</PreferenceScreen>